--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "zod": "^3.22.4"
   },
